tru to fix issue with uiwebview click. Failed

--- a/StackQA/Main.storyboard
+++ b/StackQA/Main.storyboard
@@ -1471,8 +1471,8 @@
         <segue reference="uQv-Ln-Urv"/>
         <segue reference="Zma-F1-cBs"/>
         <segue reference="xUG-jW-SU9"/>
-        <segue reference="hPV-is-y6G"/>
         <segue reference="g3P-Gf-qaj"/>
+        <segue reference="q9u-UF-HeO"/>
         <segue reference="Mye-8z-EVr"/>
         <segue reference="4oy-yi-Vs6"/>
         <segue reference="Ogc-fD-TQd"/>
