fix issue with uploading comment author

--- a/StackQA/Main.storyboard
+++ b/StackQA/Main.storyboard
@@ -1281,14 +1281,38 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="vbh-eS-XsH">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="55" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="vbh-eS-XsH">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="commentCell" id="lbM-0b-MMb" customClass="UserCommentTableViewCell">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="commentCell" rowHeight="55" id="lbM-0b-MMb" customClass="UserCommentTableViewCell">
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="lbM-0b-MMb" id="I5t-du-rux">
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jCz-xs-4yb">
+                                                    <rect key="frame" x="8" y="0.0" width="584" height="30"/>
+                                                    <state key="normal" title="Button">
+                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </state>
+                                                </button>
+                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VEg-cE-qqg">
+                                                    <rect key="frame" x="8" y="27" width="584" height="27"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                </textView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="VEg-cE-qqg" firstAttribute="trailing" secondItem="I5t-du-rux" secondAttribute="trailingMargin" id="OXX-Re-qyP"/>
+                                                <constraint firstItem="jCz-xs-4yb" firstAttribute="top" secondItem="I5t-du-rux" secondAttribute="topMargin" constant="-8" id="XGT-Bt-M9l"/>
+                                                <constraint firstItem="jCz-xs-4yb" firstAttribute="leading" secondItem="I5t-du-rux" secondAttribute="leadingMargin" id="aM1-5Y-vsL"/>
+                                                <constraint firstItem="VEg-cE-qqg" firstAttribute="leading" secondItem="I5t-du-rux" secondAttribute="leadingMargin" id="gAy-hI-BIp"/>
+                                                <constraint firstItem="jCz-xs-4yb" firstAttribute="trailing" secondItem="I5t-du-rux" secondAttribute="trailingMargin" id="hVN-w6-9gp"/>
+                                                <constraint firstItem="VEg-cE-qqg" firstAttribute="top" secondItem="I5t-du-rux" secondAttribute="topMargin" constant="19" id="iWa-NZ-E1z"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="VEg-cE-qqg" secondAttribute="bottom" constant="-8" id="ze1-39-xQt"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
