--- a/StackQA/Main.storyboard
+++ b/StackQA/Main.storyboard
@@ -99,11 +99,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <view key="tableHeaderView" contentMode="scaleToFill" id="eLW-CL-7M8">
-                            <rect key="frame" x="0.0" y="64" width="600" height="100"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        </view>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="questionCell" rowHeight="100" id="bCr-2z-dpc" customClass="QuestionsTableViewCell">
                                 <autoresizingMask key="autoresizingMask"/>
@@ -204,7 +199,6 @@
                     </navigationItem>
                     <connections>
                         <outlet property="addQuestion" destination="2FM-gE-IYr" id="zIK-8P-cPY"/>
-                        <outlet property="categoryHeaderView" destination="eLW-CL-7M8" id="mYk-eQ-N56"/>
                         <outlet property="sidebarButton" destination="wxV-oX-zhg" id="eJ1-qO-XHG"/>
                         <segue destination="L2G-jD-e0s" kind="presentation" identifier="showQuestionForm" id="Zma-F1-cBs"/>
                         <segue destination="8TF-aP-r7l" kind="show" identifier="showAnswersListForQuestion" id="1uy-uL-sgR"/>
@@ -887,6 +881,7 @@
                     <connections>
                         <outlet property="sidebarButton" destination="zCp-r2-hvd" id="6eq-mv-qbG"/>
                         <outlet property="tableView" destination="vNj-xV-ZIf" id="CFH-GJ-Hjo"/>
+                        <segue destination="2vF-PV-YRg" kind="show" identifier="categoryQuestions" id="K5f-lu-PVN"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NwW-Of-apZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1616,13 +1611,13 @@
         <segue reference="5Em-mt-R6W"/>
         <segue reference="4oy-yi-Vs6"/>
         <segue reference="Ogc-fD-TQd"/>
-        <segue reference="jdO-yh-WYz"/>
-        <segue reference="uQv-Ln-Urv"/>
-        <segue reference="pXd-z1-64T"/>
+        <segue reference="K5f-lu-PVN"/>
         <segue reference="1uy-uL-sgR"/>
         <segue reference="Zma-F1-cBs"/>
         <segue reference="x3p-uV-IHe"/>
         <segue reference="Mye-8z-EVr"/>
         <segue reference="q9u-UF-HeO"/>
+        <segue reference="jdO-yh-WYz"/>
+        <segue reference="pXd-z1-64T"/>
     </inferredMetricsTieBreakers>
 </document>
